# mocklimit

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
specs/: openai.yaml
src/mocklimit/: __init__.py  __main__.py  logging.py  main.py
src/mocklimit/openapi/: __init__.py  models.py  parser.py  response_generator.py
src/mocklimit/ratelimit/: __init__.py  composite.py  fixed_window.py  models.py  quantized.py  sliding_window.py  token_bucket.py
src/mocklimit/server/: __init__.py  app.py  config.py  error_templates.py  formatters.py  metrics.py  stats.py
tests/: test_import.py
tests/openapi/: __init__.py  test_parser.py  test_response_generator.py
tests/openapi/fixtures/: anthropic_subset.yaml  gemini_2_5_subset.yaml  gemini_subset.yaml  openai_subset.yaml  test_spec.yaml
tests/ratelimit/: __init__.py  test_composite.py  test_fixed_window.py  test_quantized.py  test_sliding_window.py
tests/server/: conftest.py  test_app.py  test_cap_field.py  test_metrics.py  test_providers.py
tests/server/configs/: anthropic.yaml  gemini.yaml  openai.yaml  rpm_only.yaml  rpm_tpm_limits.yaml
tests/server/fixtures/: backpressure.code-workspace  rate_config.yaml  sliding_window_config.yaml
typings/jsonref/: __init__.pyi
