[project]
name = "mocklimit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stanislav Kosorin", email = "stanokosorin4@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
